# camada-osprey-core

./: .cursorrules  .env.example  .env.production  .gitignore  AI_AGENT_GUIDE.md  AI_REVIEW_FIXES_COMPLETED.md  ANALISE_PAINEL_ADMIN.md  ARCHITECTURE_DECISIONS.md  ARQUITETURA_TECNICA.md  CLAUDE.md  CLERK_HOMEPAGE_INTEGRATION.md  CLERK_INTEGRATION_SUMMARY.md  CLERK_MIGRATION_CHECKLIST.md  CLERK_QUICK_START.md  CLERK_README.md  CLERK_SETUP_GUIDE.md  CLERK_TROUBLESHOOTING.md  CLERK_VISUAL_CHANGES.md  COMANDOS_RAPIDOS.md  COVER_LETTER_MARKDOWN_RENDERING.md  CTO_ANALYSIS_I539_FLOW.md  DATABASE_FIX_SUMMARY.md  DIAGRAMA_VISUAL.txt  DOCUMENT_UPLOAD_DASHBOARD_FIX.md  EMAIL_BYPASS_TESTING.md  ENTERPRISE_READINESS_ROADMAP.md  FERNANDA_SANTOS_H1B_COMPLETE_APPLICATION_20251120_170646.txt  FLUXO_JORNADA_CLIENTE.md  FLUXO_STRIPE_DIRETO.md  FOREX_COPY_TRADING_RECOMMENDATION.md  FOREX_TOOLS_MATURITY_REPORT.md  FORMULARIOS_OFICIAIS_README.md  GEMINI.md  I765_COVER_LETTER_FIX.md  IMMIGRATION_LEGAL_RULES_README.md  IMPROVEMENT_PLAN.md  LOGGING_STACK_TRACES.md  MODO_TESTE_SEM_PAGAMENTO.md  POLYMARKET_CLI_ANALYSIS.md  POLYMARKET_CLI_MARKET_RESEARCH.md  (+178 more)
backend/: .env  .env.example  =1.40.0  AGENTS_KNOWLEDGE_BASE_INTEGRATION.md  AGENT_IMPORTS_UPDATE_SUMMARY.md  AGENT_LEARNING_SYSTEM.md  CODE_QUALITY_REPORT.md  Dockerfile  FORM_IMPORTS_MIGRATION_SUMMARY.md  IMPORT_MIGRATION_VERIFICATION.md  MIGRATION_NOTES_TASK29.md  OPENAI_V2_MIGRATION_SUMMARY.md  PROMPTS_TO_PORTKEY.md  QA_AGENT_TRAINING.md  QA_FEEDBACK_LOOP_SYSTEM.md  README.md  SECURITY_AUDIT_2026-01-13.md  USCIS_FORMS_README.md  __init__.py  ab_testing.py  adaptive_texts.py  admin_knowledge_base.py  admin_products.py  admin_security.py  advanced_immigration_reviewer.py  agent_knowledge_helper.py  agent_learning_system.py  ai_completeness_validator.py  ai_guardrails.py  b2b_auth_api.py  case_finalizer_complete.py  cases_api.py  claude_agents_api.py  completeness_analyzer.py  conversational_assistant.py  create_admin_user.py  create_stripe_coupon.py  create_superadmin.py  create_test_admin.py  cross_document_consistency.py  (+112 more)
backend/admin/: __init__.py  knowledge_base.py  products.py  security.py
backend/agents/: BASE_AGENT_IMPLEMENTATION.md  IMMIGRATION_EXPERT_MIGRATION.md  README.md  __init__.py  base.py  conversational_assistant.py  immigration_expert.py
backend/analytics/: __init__.py  analyzer.py  collector.py  endpoints.py  models.py
backend/api/: admin_products.py  agents.py  auth.py  auto_application.py  auto_application_ai.py  auto_application_downloads.py  auto_application_packages.py  completeness.py  documents.py  downloads.py  education.py  email_packages.py  friendly_form.py  knowledge_base.py  oracle.py  owl_agent.py  payments.py  specialized_agents.py  uscis_forms.py  video_editing.py  visa_updates_admin.py  voice.py
backend/cache/: ocr_cache.py
backend/case/: MIGRATION_NOTES.md  __init__.py  completeness_analyzer.py  finalizer.py  finalizer_complete.py
backend/compliance/: MIGRATION_NOTES.md  __init__.py  advanced_reviewer.py  inadmissibility.py  legal_rules.py  policy_engine.py  reviewer.py
backend/config/: README.md  __init__.py  llm_config.py  settings.py  validation.py
backend/core/: agents.py  auth.py  database.py  logging.py  rate_limit.py  sentry.py  serialization.py
backend/docs/: CLEANUP_SUMMARY_2026-01-14.md  ENVIRONMENT_SETUP_GUIDE.md  FIXES_2026-01-14.md  FIXES_2026-01-14_PART2.md  FIXES_2026-01-14_PART3.md  LOGGING_CONFIGURATION_GUIDE.md  LOGGING_FIXES_2026-01-14.md  LOGGING_FORMATS_GUIDE.md  QUICK_START_PYPROJECT.md
backend/documents/: __init__.py  analyzer.py  catalog.py  classifier.py  consistency.py  data_extractor.py  metrics.py  quality_checker.py  recognition.py  validation_database.py
backend/forms/: __init__.py  field_extraction.py  filler.py  i129_overlay.py  structures.py
backend/integrations/: __init__.py
backend/knowledge/: MIGRATION_NOTES.md  __init__.py  extraction.py  helper.py  manager.py
backend/learning/: MIGRATION_NOTES.md  __init__.py  agent_learning.py  feedback.py  iterative_learning.py
backend/llm/: README.md  __init__.py  claude_client.py  exceptions.py  guardrails.py  helpers.py  portkey_client.py  types.py
backend/metrics/: __init__.py  endpoints.py  instrumentation.py  passive_collector.py
backend/models/: auto_application.py  documents.py  education.py  enums.py  user.py  video.py  video_editing.py
backend/monitoring/: performance_monitor.py
backend/pipeline/: __init__.py  birth_certificate_validator.py  consistency_engine.py  consistency_stage.py  driver_license_validator.py  google_document_ai.py  google_vision_ocr.py  i765_validator.py  i797_stages.py  i797_validator.py  integration.py  marriage_certificate_validator.py  medical_records_validator.py  mrz_parser.py  passport_ocr.py  passport_stages.py  pipeline_framework.py  real_ocr_engine.py  social_security_validator.py  tax_documents_validator.py  utility_bills_validator.py
backend/policies/: BIRTH_CERTIFICATE.yaml  CREDENTIAL_EVALUATION.yaml  DEGREE_CERTIFICATE.yaml  EMPLOYMENT_OFFER_LETTER.yaml  EMPLOYMENT_VERIFICATION_LETTER.yaml  I693_MEDICAL.yaml  I797_NOTICE.yaml  I94_RECORD.yaml  MARRIAGE_CERT.yaml  PASSPORT_ID_PAGE.yaml  PAY_STUB.yaml  TAX_RETURN_1040.yaml  TRANSCRIPT.yaml  TRANSLATION_CERTIFICATE.yaml
backend/scripts/: MIGRATION_NOTES.md  README.md  __init__.py  create_admin_user.py  create_stripe_coupon.py  create_superadmin.py  create_test_admin.py  fix_indexes.py  migrate_is_anonymous.js  mongodb_backup.py
backend/services/: ai_form_processing.py  cases.py  documents.py  education.py  video_editing.py  video_mcp_server.py  video_remotion.py
backend/tests/: test_e2e.py
backend/tools/: __init__.py  definitions.py  executor.py
backend/utils/: __init__.py  adaptive_texts.py  form_validator.py  proactive_alerts.py  rate_limiter.py  sanitizer.py  scheduler.py  social_proof.py  validators.py  vouchers.py
backend/visa/: __init__.py  api.py  auto_updater.py  directives.yaml  document_mapping.py  information.py  specifications.py
backend/voice/: MIGRATION_NOTES.md  README.md  __init__.py  (+2 more)
(+641 files in other folders)
